--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node dist/main.js",
     "build": "tsc",
     "dev": "tsx watch src/main.ts",
-    "test": "vitest"
+    "test": "vitest",
+    "format": "exec biome format --write ./src",
+    "lint": "exec biome lint --write --unsafe ./src"
   },
   "repository": {
     "type": "git",
@@ -38,6 +40,7 @@
     "zod": "^4.0.15"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.1.4",
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
