--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "helmet": "^8.1.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.1",
+    "pino-http": "^10.5.0",
+    "pino-pretty": "^13.1.1",
     "supertest": "^7.1.4",
     "swagger-ui-express": "^5.0.1",
     "zod": "^4.0.15"
@@ -47,7 +48,6 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/morgan": "^1.9.10",
     "@types/supertest": "^6.0.3",
     "@types/swagger-ui-express": "^4.1.8",
     "prisma": "^6.13.0",
