--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "build": "tsc",
     "dev": "tsx watch src/main.ts",
     "test": "vitest",
-    "format": "exec biome format --write ./src",
     "lint": "exec biome lint --write --unsafe ./src"
   },
   "repository": {
@@ -43,7 +42,7 @@
     "zod": "^4.0.15"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.1.4",
+    "@biomejs/biome": "^2.1.4",
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
