--- a/package.json
+++ b/package.json
@@ -1,58 +1,56 @@
 {
-  "name": "api-express",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.ts",
-  "scripts": {
-    "start": "node dist/main.js",
-    "build": "tsc",
-    "dev": "tsx watch src/main.ts",
-    "test": "vitest",
-    "lint": "exec biome lint --write --unsafe ./src"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/teigorme/api-express.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "type": "module",
-  "bugs": {
-    "url": "https://github.com/teigorme/api-express/issues"
-  },
-  "homepage": "https://github.com/teigorme/api-express#readme",
-  "dependencies": {
-    "@asteasolutions/zod-to-openapi": "^8.1.0",
-    "@casl/ability": "^6.7.3",
-    "@casl/prisma": "^1.5.2",
-    "@prisma/client": "6.13.0",
-    "bcrypt": "^6.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "express-zod-safe": "^2.0.0",
-    "helmet": "^8.1.0",
-    "http-status-codes": "^2.3.0",
-    "jsonwebtoken": "^9.0.2",
-    "pino-http": "^10.5.0",
-    "pino-pretty": "^13.1.1",
-    "supertest": "^7.1.4",
-    "swagger-ui-express": "^5.0.1",
-    "zod": "^4.0.15"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "^2.1.4",
-    "@types/bcrypt": "^6.0.0",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/supertest": "^6.0.3",
-    "@types/swagger-ui-express": "^4.1.8",
-    "prisma": "^6.13.0",
-    "tsx": "^4.20.3",
-    "typescript": "^5.9.2",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.2.4"
-  }
+        "name": "api-express",
+        "version": "1.0.0",
+        "description": "",
+        "main": "index.ts",
+        "scripts": {
+                "start": "node dist/main.js",
+                "build": "tsc",
+                "dev": "tsx watch src/main.ts",
+                "test": "vitest"
+        },
+        "repository": {
+                "type": "git",
+                "url": "git+https://github.com/teigorme/api-express.git"
+        },
+        "keywords": [],
+        "author": "",
+        "license": "MIT",
+        "type": "module",
+        "bugs": {
+                "url": "https://github.com/teigorme/api-express/issues"
+        },
+        "homepage": "https://github.com/teigorme/api-express#readme",
+        "dependencies": {
+                "@asteasolutions/zod-to-openapi": "^8.1.0",
+                "@casl/ability": "^6.7.3",
+                "@casl/prisma": "^1.5.2",
+                "@prisma/client": "6.13.0",
+                "bcrypt": "^6.0.0",
+                "cors": "^2.8.5",
+                "dotenv": "^17.2.1",
+                "express": "^5.1.0",
+                "express-zod-safe": "^2.0.0",
+                "helmet": "^8.1.0",
+                "http-status-codes": "^2.3.0",
+                "jsonwebtoken": "^9.0.2",
+                "pino-http": "^10.5.0",
+                "pino-pretty": "^13.1.1",
+                "supertest": "^7.1.4",
+                "swagger-ui-express": "^5.0.1",
+                "zod": "^4.0.15"
+        },
+        "devDependencies": {
+                "@types/bcrypt": "^6.0.0",
+                "@types/cors": "^2.8.19",
+                "@types/express": "^5.0.3",
+                "@types/jsonwebtoken": "^9.0.10",
+                "@types/supertest": "^6.0.3",
+                "@types/swagger-ui-express": "^4.1.8",
+                "prisma": "^6.13.0",
+                "tsx": "^4.20.3",
+                "typescript": "^5.9.2",
+                "vite-tsconfig-paths": "^5.1.4",
+                "vitest": "^3.2.4"
+        }
 }
